test/valid/forward_decl.csmall
void f();

void f() {
	int a = 5;
}

int main() {
	f();
	return 0;
}