test/errors/invalidassignment.csmall
int main() {
	int a = beer;
	return 0;
}